clusters/production/apps/wshno/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wshno-production
  labels:
    app.kubernetes.io/part-of: wshno-production
