clusters/production/apps/wshno/cilium-cluster-nodes-to-http.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cluster-nodes-to-wshno-http
  namespace: wshno-production
spec:
  endpointSelector:
    matchLabels:
      app: wshno
  ingress:
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
